--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.997.0",
     "@aws-sdk/lib-storage": "^3.997.0",
+    "@keystatic/core": "^0.5.48",
     "@mdx-js/react": "^3.1.1",
     "@sanity/icons": "^3.7.4",
     "@sanity/image-url": "^2.0.3",
